{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 648,
  "lineage": "788a05a7-6b18-d99c-c28f-cac91de70df5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bank-beanstalk-app-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:security-group/sg-0f2d09c9bbe4ae2f1",
            "description": "Security group for beanstalk load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2d09c9bbe4ae2f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "banking-beanstalk-elb-sg",
            "name_prefix": "",
            "owner_id": "137370044763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Beanstalk_ELB_SG"
            },
            "tags_all": {
              "Name": "Beanstalk_ELB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08489608da7daed79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bank_app_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:security-group/sg-0cf646fb53bd53234",
            "description": "Security group for database connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf646fb53bd53234",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c6af21f58bbb4bb"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "banking_application_database_sg",
            "name_prefix": "",
            "owner_id": "137370044763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS_instance_SG"
            },
            "tags_all": {
              "Name": "RDS_instance_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08489608da7daed79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.banking-beanstalk-Instance",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "banking-beanstalk-Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:security-group/sg-03c6af21f58bbb4bb",
            "description": "Security group for beanstalk instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c6af21f58bbb4bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "java-beanstalk-instance-sg",
            "name_prefix": "",
            "owner_id": "137370044763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Beanstalk_instance_SG"
            },
            "tags_all": {
              "Name": "Beanstalk_instance_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08489608da7daed79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:network-acl/acl-0e64ad94505c9f9a7",
            "default_network_acl_id": "acl-0e64ad94505c9f9a7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e64ad94505c9f9a7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "137370044763",
            "subnet_ids": [
              "subnet-03348996b29d8affd",
              "subnet-0381af8a991cbf71b",
              "subnet-07408dc1fd9926579"
            ],
            "tags": {
              "Name": "banking-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-08489608da7daed79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:route-table/rtb-08de7afad094f1e6e",
            "default_route_table_id": "rtb-08de7afad094f1e6e",
            "id": "rtb-08de7afad094f1e6e",
            "owner_id": "137370044763",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "banking-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08489608da7daed79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:security-group/sg-06961b5b654955fec",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06961b5b654955fec",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "137370044763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "banking-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-default",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-08489608da7daed79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:internet-gateway/igw-011cc1730d0821dab",
            "id": "igw-011cc1730d0821dab",
            "owner_id": "137370044763",
            "tags": {
              "Name": "banking-vpc",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-08489608da7daed79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-011cc1730d0821dab",
            "id": "r-rtb-03e910c7abfa297e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e910c7abfa297e5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:route-table/rtb-03e910c7abfa297e5",
            "id": "rtb-03e910c7abfa297e5",
            "owner_id": "137370044763",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "banking-vpc-public",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-public",
              "enviroment": "testing",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08489608da7daed79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b8834c93c68af33",
            "route_table_id": "rtb-03e910c7abfa297e5",
            "subnet_id": "subnet-0381af8a991cbf71b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf1b1ca98b97da5a",
            "route_table_id": "rtb-03e910c7abfa297e5",
            "subnet_id": "subnet-07408dc1fd9926579"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065876c149dbb6fda",
            "route_table_id": "rtb-03e910c7abfa297e5",
            "subnet_id": "subnet-03348996b29d8affd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-0381af8a991cbf71b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0381af8a991cbf71b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-vpc-public-us-east-1a",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-public-us-east-1a",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-08489608da7daed79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-07408dc1fd9926579",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.21.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07408dc1fd9926579",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-vpc-public-us-east-1b",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-public-us-east-1b",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-08489608da7daed79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-03348996b29d8affd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03348996b29d8affd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-vpc-public-us-east-1c",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-public-us-east-1c",
              "enviroment": "testing",
              "terraform": "true"
            },
            "vpc_id": "vpc-08489608da7daed79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:vpc/vpc-08489608da7daed79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-0e64ad94505c9f9a7",
            "default_route_table_id": "rtb-08de7afad094f1e6e",
            "default_security_group_id": "sg-06961b5b654955fec",
            "dhcp_options_id": "dopt-03c9a2e95025c980c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08489608da7daed79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08de7afad094f1e6e",
            "owner_id": "137370044763",
            "tags": {
              "Name": "banking-vpc",
              "enviroment": "testing",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc",
              "enviroment": "testing",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}